Fix wrapping on game list. Comment out nav for now. Fix layout of memory cards

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@ body {
   background-color: var(--apple-black);
   font-family: "Press Start 2P", sans-serif;
   max-width: 1600px;
-  height: 100%;
+  min-height: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -61,7 +61,7 @@ header {
   justify-content: space-around;
   height: 70%;
 }
-
+/* 
 nav ul {
   display: flex;
   flex-direction: row;
@@ -71,7 +71,7 @@ nav ul {
 nav li {
   padding: 4px;
   border: 4px solid var(--apple-dark-green);
-}
+} */
 
 /* Styling for main screen section */
 #main-screen {
@@ -235,9 +235,9 @@ footer a {
     width: 2em;
     height: 2em;
   }
-  nav {
+  /* nav {
     font-size: 0.75rem;
-  }
+  } */
   footer {
     height: 2rem;
   }
@@ -274,9 +274,9 @@ footer a {
     width: 1.75em;
     height: 1.75em;
   }
-  nav {
+  /* nav {
     font-size: 0.5rem;
-  }
+  } */
   h1 {
     font-size: 1rem;
     margin-left: 20px;
@@ -287,9 +287,8 @@ footer a {
   }
   #main-screen {
     width: 90vw;
-    height: 90vh;
+    min-height: 90vh;
   }
-  
 }
 
 @media (max-width: 310px) {
