--- a/assets/css/memory-cards.css
+++ b/assets/css/memory-cards.css
@@ -17,7 +17,6 @@
 /* Grid styling */
 .grid {
   max-width: 900px;
-  max-height: 640px;
   margin: 0 auto;
   display: grid;
   grid-template-rows: auto auto auto;
@@ -26,8 +25,8 @@
 
 /* Styling for the cards */
 .card {
-  width: 150px;
-  height: 150px;
+  width: 125px;
+  height: 125px;
   position: relative;
   margin: 15px auto;
   -webkit-transform: scale(1);
