--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,21 +1,21 @@
 /* Styling for menu section of index.html */
 #game-list {
   min-height: 60vh;
-  width: 80%;
+  max-width: 80%;
   margin-top: 5%;
   margin-bottom: 10%;
   margin-left: auto;
   margin-right: auto;
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  grid-template-rows: auto auto;
-  grid-gap: 20% 10%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .game-selection {
   width: 150px;
   height: 150px;
-  margin: 0 auto;
+  margin: 60px 30px;
 }
 
 .game-selection img {
@@ -36,12 +36,20 @@
 }
 
 /* Media queries */
+@media (min-width: 2250px) {
+  .game-selection {
+    margin: 80px
+  }
+}
 @media (max-width: 840px),
 (max-height: 810px) {
+  #game-list {
+    max-width: 90%;
+  }
   .game-selection {
-    width: 150px;
-    height: 150px;
-    margin-bottom: 10px;
+    width: 100px;
+    height: 100px;
+    margin: 20px 20px 40px;
   }
 
   .title {
@@ -52,8 +60,9 @@
 @media (max-width: 520px),
 (max-height: 630px) {
   .game-selection {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
+    margin: 30px;
   }
   .title {
     font-size: 0.75rem;
